# Web3Bugs

./: LICENSE  README.md
.github/ISSUE_TEMPLATE/: new-bugs.md
.github/workflows/: validate.yml
Contracts/10/: README.md
Contracts/100/: .prettierignore  .prettierrc  .solcover.js  hardhat.config.ts  package.json
Contracts/101/: CLARIFICATION.txt  README.md
Contracts/102/: foundry.toml  hardhat.config.ts  mocha-reporter-config.json  package.json
Contracts/103/: .editorconfig  .eslintignore  .prettierrc.js  .setup.js  .solhintignore  .yarnrc  hardhat.config.ts  tsconfig.json
Contracts/104/: README.md  README_TEMPLATE.md
Contracts/105/: .env.example  .solhint.json  README.md  foundry.toml  hardhat.config.ts  package.json  tsconfig.json
Contracts/106/: .gas-snapshot  hardhat.config.js
Contracts/107/: .solcover.js  README.md  tsconfig.json
Contracts/109/: README.md  package-lock.json
Contracts/110/: README.md  foundry.toml  hardhat.config.js  package-lock.json
Contracts/113/: .prettierrc.js  .solhint.json  README.md  hardhat.config.ts  package.json
Contracts/115/: README.md
Contracts/12/: .solhint.json  LICENSE.md  tsconfig.json
Contracts/122/: README.md
Contracts/123/: .prettierignore  .prettierrc.yaml  .solhint.json  .solhintignore  hardhat-cvx.config.ts  hardhat.config.ts  index.ts  test-output.txt
Contracts/124/: README.md
Contracts/125/: README.md
Contracts/13/: addmarket.js  hardhat.config.js  package.json  project_spec.md
Contracts/131/: README.md
Contracts/17/: README.md  hardhat.config.js  package.json
Contracts/18/: README.md
Contracts/19/: README.md
Contracts/20/: README.md
Contracts/21/: hardhat.config.js  package.json
Contracts/23/: CONTRIBUTING.md  Dockerfile  README.md  brownie-config.yaml  build_sandbox.sh  pytest.ini  requirements.txt  tox.ini
Contracts/25/: .soliumrc.json  DETAILED.md  package.json
Contracts/26/: EventMaker.sh  RCFull.sol  hardhat.config.js  package-lock.json  package.json  truffle-config.js
Contracts/27/cosmos-gravity-bridge/orchestrator/cosmos_gravity/: Cargo.toml
Contracts/27/cosmos-gravity-bridge/orchestrator/cosmos_gravity/src/: send.rs
Contracts/27/cosmos-gravity-bridge/orchestrator/ethereum_gravity/: Cargo.toml
Contracts/27/cosmos-gravity-bridge/orchestrator/ethereum_gravity/src/: lib.rs  logic_call.rs  utils.rs
Contracts/27/cosmos-gravity-bridge/orchestrator/ethereum_gravity/test_files/: ethers_test_powers  valset_update_rlp
Contracts/27/cosmos-gravity-bridge/orchestrator/gbt/: Cargo.toml
Contracts/27/cosmos-gravity-bridge/orchestrator/gbt/src/: main.rs  relayer.rs  utils.rs
Contracts/27/cosmos-gravity-bridge/orchestrator/gbt/src/client/: cosmos_to_eth.rs  eth_to_cosmos.rs
Contracts/27/cosmos-gravity-bridge/orchestrator/gravity_proto/: Cargo.toml
Contracts/27/cosmos-gravity-bridge/orchestrator/gravity_proto/src/: lib.rs
Contracts/27/cosmos-gravity-bridge/orchestrator/gravity_utils/: Cargo.toml
Contracts/27/cosmos-gravity-bridge/orchestrator/gravity_utils/src/: connection_prep.rs  get_with_retry.rs
Contracts/27/cosmos-gravity-bridge/orchestrator/gravity_utils/src/types/: batches.rs  config.rs  ethereum_events.rs  logic_call.rs
Contracts/27/cosmos-gravity-bridge/orchestrator/relayer/: Cargo.toml
Contracts/27/cosmos-gravity-bridge/orchestrator/relayer/src/: batch_relaying.rs  find_latest_valset.rs  valset_relaying.rs
Contracts/28/: LICENSE  brownie-config.yaml  hardhat.config.ts
Contracts/30/: README.md  package.json
Contracts/31/: README.md
Contracts/34/: README.md
Contracts/35/: README.md
Contracts/37/: README.md
Contracts/39/: README.md
Contracts/41/: README.md
Contracts/43/: package.json
Contracts/44/: README.md  hardhat.config.ts  package.json  tsconfig.json
Contracts/45/: README.md  codecov.yml  deployConfig.json
Contracts/47/: README.md  hardhat.config.js  package.json
Contracts/52/: package.json
Contracts/53/: .env.example  .prettierrc.yaml  LICENSE  README.md  hardhat.config.ts  package.json
Contracts/54/: README.md
Contracts/55/: README.md
Contracts/56/: hardhat.config.js
Contracts/57/: README.md
Contracts/58/: README.md
Contracts/6/: Beebots.sol
Contracts/61/: README.md  hardhat.config.ts  package-lock.json  tsconfig.json
Contracts/62/: README.md
Contracts/65/: README.md
Contracts/66/: package.json  package.public.json
Contracts/69/: README.md
Contracts/7/: README.md
Contracts/70/: README.md
Contracts/71/: .solcover.js  README.md  coverage.json  hardhat.config.js  package.json
Contracts/72/: README.md
Contracts/75/: README.md
Contracts/76/: README.md  package.json
Contracts/78/: README.md  package.json
Contracts/79/: .prettierrc.js  Makefile
Contracts/8/: README.md
Contracts/81/: README.md  brownie-config.yaml
Contracts/83/: .env.example  README.md
Reports/: 10.md  101.md  102.md  104.md  107.md  109.md  11.md  112.md  113.md  115.md  12.md  122.md  123.md  124.md  13.md  14.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  25.md  26.md  28.md  32.md  38.md  39.md  41.md  43.md  44.md  45.md  49.md  5.md  50.md  52.md  53.md  54.md  (+19 more)
contracts/27/cosmos-gravity-bridge/orchestrator/orchestrator/: Cargo.toml
contracts/27/cosmos-gravity-bridge/orchestrator/orchestrator/src/: ethereum_event_watcher.rs  main_loop.rs
contracts/27/cosmos-gravity-bridge/orchestrator/test_runner/: Cargo.toml
contracts/27/cosmos-gravity-bridge/orchestrator/test_runner/src/: bootstrapping.rs  happy_path.rs  happy_path_v2.rs  main.rs  orch_keys.rs  relay_market.rs  transaction_stress_test.rs  utils.rs  valset_stress.rs
docs/: classification.md  contribution.md  standard.md
reports/: 10.md  100.md  101.md  102.md  103.md  104.md  105.md  106.md  107.md  109.md  11.md  110.md  112.md  113.md  114.md  115.md  12.md  122.md  123.md  124.md  125.md  13.md  131.md  14.md  143.md  145.md  16.md  17.md  18.md  19.md  190.md  191.md  192.md  193.md  20.md  21.md  22.md  23.md  24.md  25.md  (+64 more)
results/: bugs.csv  contests.csv
scripts/: check_contests_csv.py  check_contracts.py  check_git.sh
(+9809 files in other folders)
