[package]
name = "gbt"
version = "0.5.6"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
license = "Apache-2.0"
description = "Gravity Bridge Tools. User tooling for the Althea Ethereum <=> Cosmos Gravtiy bridge"
repository = "https://github.com/althea-net/cosmos-gravity-bridge"
homepage = "https://gravitybridge.althea.net/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {path = "../gravity_proto/"}
relayer = {path = "../relayer/"}
orchestrator = {path = "../orchestrator/"}

deep_space = "2.4"
serde_derive = "1.0"
clarity = "0.4"
clap = "3.0.0-beta.2"
serde = "1.0"
actix-rt = "2.2"
lazy_static = "1"
url = "2"
web30 = "0.14"
env_logger = "0.8"
log = "0.4"
openssl-probe = "0.1"
tokio = "1.4"
rand = "0.8"
dirs = "3.0"
toml = "0.5"